# server-monitor

./: README.md
client/: client.py
html/: index.html  state.json
server/: CMakeLists.txt  main.cpp
server/app/: CMakeLists.txt  app.h  app_monitor.cpp
